# opencv_pencil

./: CMakeLists.txt
src/: sketch.cpp
